<resources>
    <string name="app_name">Ocean Coffee</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world</string>
    <string name="reminder">Reminder</string>
    <string name="done">Done</string>
    <string name="name_hint">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="OrderCoffee">Request Coffee</string>
    <string name="Order">Order</string>
</resources>
